--- a/Style.css
+++ b/Style.css
@@ -1,20 +1,59 @@
 @charset "UTF-8";
 /* Regra charset caso haja problemas de acentuação */
 
+header {
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 18px;
+font-weight: 400;
+color: whitesmoke;
+}
+
+
 body {
     background-image: linear-gradient(36deg, #aa4848, #4f4fca);
     color: black;
-    font-size: 12pt;
-    font-family: Arial;
+    font: 18px , Helvetica, Sans-serif;
+    text-align: start;
 }
+
 
 h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #0e0000;
+    font-size: 22px;
+    font-stretch: condensed;
+    text-align: justify;
+ }
+
+h2 {
+    font-style: bold;
+    font-size: 24px;
+    font-weight: 800;
+    font-display: initial;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+
+#titulo {
+    color:antiquewhite;
 }
 
+.relevante {
+    font-style: bold;
+    font-weight: 900;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: yellow;
+    }
+
+    
 a {
     color: blue;
     text-decoration: underline;
+    font-size: 22px;
+}
+a:hover {
+    color: greenyellow;
+    text-decoration: double;
+    background-color: green;
 }
 
 /* Manter os contatos */
